fix: hide scrollbar

--- a/docs/app/[lng]/globals.css
+++ b/docs/app/[lng]/globals.css
@@ -75,6 +75,21 @@
   }
 }
 
+@layer utilities {
+  @variants responsive {
+    /* Hide scrollbar for Chrome, Safari and Opera */
+    .no-scrollbar::-webkit-scrollbar {
+      display: none;
+    }
+
+    /* Hide scrollbar for IE, Edge and Firefox */
+    .no-scrollbar {
+      -ms-overflow-style: none; /* IE and Edge */
+      scrollbar-width: none; /* Firefox */
+    }
+  }
+}
+
 /* https://github.com/disqus/disqus-react/issues/134 */
 #disqus_thread {
   color-scheme: none;
